Fixed navbar items showing black on mobile

--- a/files/css/style.css
+++ b/files/css/style.css
@@ -422,11 +422,11 @@ p, .dashed > li, .list > li {
       background-color: rgba(255, 255, 255, 0.8);
     }
     .navbar-default .navbar-nav > li > a {
-      color: black;
+      color: #3EC1ED;
       text-align: left; 
     }
     .navbar-default .navbar-nav > li > a:visited {
-      color: black;
+      color: #3EC1ED;
     }
     .img-square {
       width: 60px;
@@ -1070,11 +1070,11 @@ a.session-box:hover {
 }
 .navbar-default .navbar-nav > li > a {
   line-height: 100px;
- /* -webkit-transition: all 0.4s;
+  -webkit-transition: all 0.4s;
   -moz-transition: all 0.4s;
   -ms-transition: all 0.4s;
   -o-transition: all 0.4s;
-  transition: all 0.4s;*/
+  transition: all 0.4s;
 }
 .navbar-default.smaller {
     width: 100%;
